--- a/styles.css
+++ b/styles.css
@@ -1107,7 +1107,7 @@ img {
 
 .hero-overlay {
   position: absolute;
-  left: 0; top: 0; right: 0; bottom: 0;
+  left: 0; top: 64px; right: 0; bottom: 0;
   width: 100%;
   height: 100%;
   z-index: 2;
